--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1013,6 +1013,7 @@ set (PCH_SOURCES
 	textures/anim_switches.cpp
 	textures/automaptexture.cpp
 	textures/bitmap.cpp
+	textures/brightmaptexture.cpp
 	textures/buildtexture.cpp
 	textures/canvastexture.cpp
 	textures/ddstexture.cpp
