--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -931,7 +931,6 @@ set (PCH_SOURCES
 	g_shared/a_action.cpp
 	g_shared/a_decals.cpp
 	g_shared/a_dynlight.cpp
-	g_shared/a_dynlightdata.cpp
 	g_shared/a_flashfader.cpp
 	g_shared/a_lightning.cpp
 	g_shared/a_morph.cpp
@@ -1046,6 +1045,7 @@ set (PCH_SOURCES
 	intermission/intermission_parse.cpp
 	r_data/colormaps.cpp
 	r_data/gldefs.cpp
+	r_data/a_dynlightdata.cpp
 	r_data/r_translate.cpp
 	r_data/sprites.cpp
 	r_data/portalgroups.cpp
