--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -740,7 +740,6 @@ set( FASTMATH_SOURCES
 	gl/scene/gl_walls.cpp
 	gl/scene/gl_sprite.cpp
 	gl/scene/gl_skydome.cpp
-	gl/scene/gl_renderhacks.cpp
 	gl/scene/gl_weapon.cpp
 	gl/scene/gl_scene.cpp
 	gl/scene/gl_swscene.cpp
@@ -754,6 +753,7 @@ set( FASTMATH_SOURCES
 	hwrenderer/dynlights/hw_dynlightdata.cpp
 	hwrenderer/scene/hw_fakeflat.cpp
 	hwrenderer/scene/hw_clipper.cpp
+	hwrenderer/scene/hw_renderhacks.cpp
 	r_data/models/models.cpp
 	r_data/matrix.cpp
 )
