--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -15,80 +15,90 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - {
-            name: "Visual Studio 64-bit",
-            os: windows-2019,
-            extra_options: "-A x64",
-            build_type: "Release"
-          }
-        - {
-            name: "Visual Studio 64-bit",
-            os: windows-2019,
-            extra_options: "-A x64",
-            build_type: "Debug"
-          }
-        - {
-            name: "Visual Studio 32-bit",
-            os: windows-2019,
-            extra_options: "-A Win32 -DFORCE_INTERNAL_ZLIB=ON",
-            build_type: "Release"
-          }
-        - {
-            name: "macOS",
-            os: macos-11,
-            build_type: "Release"
-          }
-        - {
-            name: "macOS",
-            os: macos-11,
-            extra_options: "-DDYN_FLUIDSYNTH=OFF -DDYN_OPENAL=OFF -DDYN_SNDFILE=OFF -DDYN_MPG123=OFF",
-            deps_cmdline: "brew install fluidsynth mpg123 libsndfile",
-            build_type: "Debug"
-          }
-        - {
-            name: "Linux GCC 7",
-            os: ubuntu-20.04,
-            extra_options: "-DCMAKE_C_COMPILER=gcc-7 -DCMAKE_CXX_COMPILER=g++-7",
-            deps_cmdline: "sudo apt update && sudo apt install g++-7 libsdl2-dev libgtk2.0-dev",
-            build_type: "RelWithDebInfo"
-          }
-        - {
-            name: "Linux GCC 11",
-            os: ubuntu-20.04,
-            extra_options: "-DCMAKE_C_COMPILER=gcc-11 -DCMAKE_CXX_COMPILER=g++-11",
-            deps_cmdline: "sudo apt update && sudo apt install g++-11 libsdl2-dev libgtk-3-dev",
-            build_type: "MinSizeRel"
-          }
-        - {
-            name: "Linux Clang 6",
-            os: ubuntu-20.04,
-            extra_options: "-DCMAKE_C_COMPILER=clang-6.0 -DCMAKE_CXX_COMPILER=clang++-6.0 \
-                            -DDYN_FLUIDSYNTH=OFF -DDYN_OPENAL=OFF -DDYN_SNDFILE=OFF -DDYN_MPG123=OFF",
-            deps_cmdline: "sudo apt update && sudo apt install clang-6.0 libsdl2-dev libopenal-dev libfluidsynth-dev libmpg123-dev libsndfile1-dev",
-            build_type: "Debug"
-          }
-        - {
-            name: "Linux Clang 12",
-            os: ubuntu-20.04,
-            extra_options: "-DCMAKE_C_COMPILER=clang-12 -DCMAKE_CXX_COMPILER=clang++-12",
-            deps_cmdline: "sudo apt update && sudo apt install clang-12 libsdl2-dev",
-            build_type: "Release"
-          }
+        - name: Visual Studio 2022
+          os: windows-2022
+          extra_options:
+          build_type: Release
+
+        - name: Visual Studio 2022
+          os: windows-2022
+          extra_options:
+          build_type: Debug
+
+        - name: Visual Studio 2019
+          os: windows-2019
+          extra_options:
+          build_type: Release
+
+        - name: macOS
+          os: macos-12
+          deps_cmdline: brew install libvpx webp
+          build_type: Release
+
+        - name: macOS
+          os: macos-12
+          extra_options: -G Xcode -DDYN_OPENAL=OFF
+          deps_cmdline: brew install libvpx webp
+          build_type: Debug
+
+        - name: Linux GCC 9
+          os: ubuntu-22.04
+          extra_options: -DCMAKE_C_COMPILER=gcc-9 -DCMAKE_CXX_COMPILER=g++-9
+          deps_cmdline: sudo apt update && sudo apt install libsdl2-dev libvpx-dev libgtk2.0-dev libwebp-dev
+          build_type: RelWithDebInfo
+
+        - name: Linux GCC 12
+          os: ubuntu-22.04
+          extra_options: -DCMAKE_C_COMPILER=gcc-12 -DCMAKE_CXX_COMPILER=g++-12
+          deps_cmdline: sudo apt update && sudo apt install libsdl2-dev libvpx-dev libgtk-3-dev libwebp-dev
+          build_type: MinSizeRel
+
+        - name: Linux Clang 11
+          os: ubuntu-22.04
+          extra_options: -DCMAKE_C_COMPILER=clang-11 -DCMAKE_CXX_COMPILER=clang++-11 -DDYN_OPENAL=OFF
+          deps_cmdline: sudo apt update && sudo apt install clang-11 libsdl2-dev libvpx-dev libopenal-dev libwebp-dev
+          build_type: Debug
+
+        - name: Linux Clang 15
+          os: ubuntu-22.04
+          extra_options: -DCMAKE_C_COMPILER=clang-15 -DCMAKE_CXX_COMPILER=clang++-15
+          deps_cmdline: sudo apt update && sudo apt install clang-15 libsdl2-dev libvpx-dev libwebp-dev
+          build_type: Release
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v4
+
+    - name: Setup vcpkg
+      uses: lukka/run-vcpkg@v11
+      if: runner.os == 'Windows'
+      with:
+        vcpkgDirectory: '${{ github.workspace }}/build/vcpkg'
+        vcpkgGitCommitId: '2c401863dd54a640aeb26ed736c55489c079323b'
+
+    - name: Setup environment
+      if: runner.os == 'Windows'
+      shell: bash
+      run: echo CMAKE_TOOLCHAIN_FILE="${{ env.VCPKG_ROOT}}/scripts/buildsystems/vcpkg.cmake" >> $GITHUB_ENV
 
     - name: Install Dependencies
       shell: bash
       run: |
-        if [[ ! -z "${{ matrix.config.deps_cmdline }}" ]]; then
+        if [[ -n "${{ matrix.config.deps_cmdline }}" ]]; then
           eval ${{ matrix.config.deps_cmdline }}
         fi
+        mkdir -p build
+        cd build
+        git clone https://github.com/emawind84/ZMusic.git
+        cd ZMusic
+        git checkout mobile
+        cd ..
+        cmake -B zmusic_build -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -DCMAKE_INSTALL_PREFIX=`pwd`/zmusic_install ZMusic
+        cmake --build zmusic_build --target install --parallel 3
 
     - name: Configure
       shell: bash
       run: |
-        cmake -B build -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -DPK3_QUIET_ZIPDIR=ON ${{ matrix.config.extra_options }} .
+        cmake -B build -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -DCMAKE_PREFIX_PATH=`pwd`/build/zmusic_install -DPK3_QUIET_ZIPDIR=ON ${{ matrix.config.extra_options }} .
 
     - name: Build
       shell: bash
@@ -112,7 +122,7 @@ jobs:
 
     - name: Upload Package
       if: runner.os == 'Windows'  # Remove to store packages of all targets
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v3
       with:
         path: build/package
         name: ${{ matrix.config.name }} ${{ matrix.config.build_type }}
