--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -32,36 +32,37 @@ jobs:
 
         - name: macOS
           os: macos-12
+          extra_options: -DENABLE_OPENVR=NO
           deps_cmdline: brew install libvpx webp
           build_type: Release
 
         - name: macOS
           os: macos-12
-          extra_options: -G Xcode -DDYN_OPENAL=OFF
+          extra_options: -G Xcode -DDYN_OPENAL=OFF -DENABLE_OPENVR=NO
           deps_cmdline: brew install libvpx webp
           build_type: Debug
 
         - name: Linux GCC 9
           os: ubuntu-22.04
-          extra_options: -DCMAKE_C_COMPILER=gcc-9 -DCMAKE_CXX_COMPILER=g++-9
+          extra_options: -DCMAKE_C_COMPILER=gcc-9 -DCMAKE_CXX_COMPILER=g++-9 -DENABLE_OPENVR=NO
           deps_cmdline: sudo apt update && sudo apt install libsdl2-dev libvpx-dev libgtk2.0-dev libwebp-dev
           build_type: RelWithDebInfo
 
         - name: Linux GCC 12
           os: ubuntu-22.04
-          extra_options: -DCMAKE_C_COMPILER=gcc-12 -DCMAKE_CXX_COMPILER=g++-12
+          extra_options: -DCMAKE_C_COMPILER=gcc-12 -DCMAKE_CXX_COMPILER=g++-12 -DENABLE_OPENVR=NO
           deps_cmdline: sudo apt update && sudo apt install libsdl2-dev libvpx-dev libgtk-3-dev libwebp-dev
           build_type: MinSizeRel
 
         - name: Linux Clang 11
           os: ubuntu-22.04
-          extra_options: -DCMAKE_C_COMPILER=clang-11 -DCMAKE_CXX_COMPILER=clang++-11 -DDYN_OPENAL=OFF
+          extra_options: -DCMAKE_C_COMPILER=clang-11 -DCMAKE_CXX_COMPILER=clang++-11 -DDYN_OPENAL=OFF -DENABLE_OPENVR=NO
           deps_cmdline: sudo apt update && sudo apt install clang-11 libsdl2-dev libvpx-dev libopenal-dev libwebp-dev
           build_type: Debug
 
         - name: Linux Clang 15
           os: ubuntu-22.04
-          extra_options: -DCMAKE_C_COMPILER=clang-15 -DCMAKE_CXX_COMPILER=clang++-15
+          extra_options: -DCMAKE_C_COMPILER=clang-15 -DCMAKE_CXX_COMPILER=clang++-15 -DENABLE_OPENVR=NO
           deps_cmdline: sudo apt update && sudo apt install clang-15 libsdl2-dev libvpx-dev libwebp-dev
           build_type: Release
 
@@ -80,6 +81,16 @@ jobs:
       shell: bash
       run: echo CMAKE_TOOLCHAIN_FILE="${{ env.VCPKG_ROOT}}/scripts/buildsystems/vcpkg.cmake" >> $GITHUB_ENV
 
+    - name: Prepare OpenVR SDK dependency
+      shell: bash
+      run: |
+        mkdir -p build
+        export OPENVR_SDK=openvr-2.2.3
+        echo OPENVR_SDK="${OPENVR_SDK}" >> $GITHUB_ENV
+        cd build
+        curl -LO "https://github.com/emawind84/gzdoom/releases/download/ci_deps/${OPENVR_SDK}.tar.gz"
+        tar -xf "${OPENVR_SDK}.tar.gz"
+    
     - name: Install Dependencies
       shell: bash
       run: |
@@ -97,8 +108,11 @@ jobs:
 
     - name: Configure
       shell: bash
-      run: |
-        cmake -B build -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} -DCMAKE_PREFIX_PATH=`pwd`/build/zmusic_install -DPK3_QUIET_ZIPDIR=ON ${{ matrix.config.extra_options }} .
+      run: >
+        cmake -B build -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }} 
+        -DCMAKE_PREFIX_PATH=`pwd`/build/zmusic_install -DPK3_QUIET_ZIPDIR=ON
+        -DOPENVR_SDK_PATH=`pwd`/build/${OPENVR_SDK}
+        ${{ matrix.config.extra_options }} .
 
     - name: Build
       shell: bash
