--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -17,52 +17,52 @@ jobs:
         config:
         - name: Visual Studio 2022
           os: windows-2022
-          extra_options:
+          extra_options: -DENABLE_OPENVR=ON
           build_type: Release
 
         - name: Visual Studio 2022
           os: windows-2022
-          extra_options:
+          extra_options: -DENABLE_OPENVR=ON
           build_type: Debug
 
         - name: Visual Studio 2019
           os: windows-2019
-          extra_options:
+          extra_options: -DENABLE_OPENVR=ON
           build_type: Release
 
         - name: macOS
           os: macos-12
-          extra_options: -DENABLE_OPENVR=NO
+          extra_options:
           deps_cmdline: brew install libvpx webp
           build_type: Release
 
         - name: macOS
           os: macos-12
-          extra_options: -G Xcode -DDYN_OPENAL=OFF -DENABLE_OPENVR=NO
+          extra_options: -G Xcode -DDYN_OPENAL=OFF
           deps_cmdline: brew install libvpx webp
           build_type: Debug
 
         - name: Linux GCC 9
           os: ubuntu-22.04
-          extra_options: -DCMAKE_C_COMPILER=gcc-9 -DCMAKE_CXX_COMPILER=g++-9 -DENABLE_OPENVR=NO
+          extra_options: -DCMAKE_C_COMPILER=gcc-9 -DCMAKE_CXX_COMPILER=g++-9
           deps_cmdline: sudo apt update && sudo apt install libsdl2-dev libvpx-dev libgtk2.0-dev libwebp-dev
           build_type: RelWithDebInfo
 
         - name: Linux GCC 12
           os: ubuntu-22.04
-          extra_options: -DCMAKE_C_COMPILER=gcc-12 -DCMAKE_CXX_COMPILER=g++-12 -DENABLE_OPENVR=NO
+          extra_options: -DCMAKE_C_COMPILER=gcc-12 -DCMAKE_CXX_COMPILER=g++-12
           deps_cmdline: sudo apt update && sudo apt install libsdl2-dev libvpx-dev libgtk-3-dev libwebp-dev
           build_type: MinSizeRel
 
         - name: Linux Clang 11
           os: ubuntu-22.04
-          extra_options: -DCMAKE_C_COMPILER=clang-11 -DCMAKE_CXX_COMPILER=clang++-11 -DDYN_OPENAL=OFF -DENABLE_OPENVR=NO
+          extra_options: -DCMAKE_C_COMPILER=clang-11 -DCMAKE_CXX_COMPILER=clang++-11 -DDYN_OPENAL=OFF
           deps_cmdline: sudo apt update && sudo apt install clang-11 libsdl2-dev libvpx-dev libopenal-dev libwebp-dev
           build_type: Debug
 
         - name: Linux Clang 15
           os: ubuntu-22.04
-          extra_options: -DCMAKE_C_COMPILER=clang-15 -DCMAKE_CXX_COMPILER=clang++-15 -DENABLE_OPENVR=NO
+          extra_options: -DCMAKE_C_COMPILER=clang-15 -DCMAKE_CXX_COMPILER=clang++-15
           deps_cmdline: sudo apt update && sudo apt install clang-15 libsdl2-dev libvpx-dev libwebp-dev
           build_type: Release
 
@@ -129,7 +129,7 @@ jobs:
         if [[ "${{ runner.os }}" == 'Windows' ]]; then
           cp *.pk3 package
         elif [[ "${{ runner.os }}" == 'macOS' ]]; then
-          cp -r lzdoom.app package
+          cp -r qzdoom.app package
         elif [[ "${{ runner.os }}" == 'Linux' ]]; then
           cp *.pk3 package
         fi
