--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -127,11 +127,11 @@ jobs:
         cd build
         mkdir package
         if [[ "${{ runner.os }}" == 'Windows' ]]; then
-          cp *.pk3 package
+          cp ${{ matrix.config.build_type }}/qzdoom.exe ${{ matrix.config.build_type }}/*.pk3 package
         elif [[ "${{ runner.os }}" == 'macOS' ]]; then
           cp -r qzdoom.app package
         elif [[ "${{ runner.os }}" == 'Linux' ]]; then
-          cp *.pk3 package
+          cp qzdoom *.pk3 package
         fi
 
     - name: Upload Package
