fix more compilation errors

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1348,6 +1348,7 @@ include_directories(
 	common/textures
 	common/models
 	common/filesystem/include
+	common/filesystem/source
 	common/utility
 	common/console
 	common/engine
