--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -30,17 +30,17 @@ jobs:
           extra_options: -DENABLE_OPENVR=ON
           build_type: Release
 
-        - name: macOS
-          os: macos-14
-          extra_options: -DCMAKE_OSX_DEPLOYMENT_TARGET=10.15
-          deps_cmdline: brew install libvpx
-          build_type: Release
+        # - name: macOS
+        #   os: macos-14
+        #   extra_options: -DCMAKE_OSX_DEPLOYMENT_TARGET=10.15
+        #   deps_cmdline: brew install libvpx
+        #   build_type: Release
 
-        - name: macOS
-          os: macos-14
-          extra_options: -G Xcode -DDYN_OPENAL=OFF -DCMAKE_OSX_DEPLOYMENT_TARGET=10.15
-          deps_cmdline: brew install libvpx
-          build_type: Debug
+        # - name: macOS
+        #   os: macos-14
+        #   extra_options: -G Xcode -DDYN_OPENAL=OFF -DCMAKE_OSX_DEPLOYMENT_TARGET=10.15
+        #   deps_cmdline: brew install libvpx
+        #   build_type: Debug
 
         - name: Linux GCC 9
           os: ubuntu-22.04
